--- a/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
+++ b/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
@@ -81,7 +81,11 @@
             context-menu="$ctrl.getContextMenu(item)"
           >
             <td ng-if="$ctrl.testButton == true" class="fit-test-button-body">
-              <span ng-click="$ctrl.onTestButtonClicked({ itemId: item.id })">
+              <span 
+                ng-click="$ctrl.onTestButtonClicked({ itemId: item.id })"
+                uib-tooltip="Test Effects"
+                tooltip-append-to-body="true"  
+              >
                 <i class="fas fa-play-circle clickable"></i>
               </span>
             </td>
