--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -193,6 +193,7 @@
     <script type="text/javascript" src="./directives/controls/settingContainer.js"></script>
     <script type="text/javascript" src="./directives/controls/sort-tag-dropdown.component.js"></script>
     <script type="text/javascript" src="./directives/controls/sort-tag-list.js"></script>
+    <script type="text/javascript" src="./directives/controls/sort-tags-row.js"></script>
     <script type="text/javascript" src="./directives/controls/soundPlayer.js"></script>
     <script type="text/javascript" src="./directives/controls/specialized/discord-channel-webhooks.js"></script>
     <script type="text/javascript" src="./directives/controls/time-input.js"></script>
