Fix the search functionality in the variable inspector

--- a/gui/variable-inspector/index.html
+++ b/gui/variable-inspector/index.html
@@ -426,7 +426,7 @@
               }
               return (
                 v.key.toLowerCase().includes(this.search.toLowerCase()) ||
-                v.history[0].value
+                v.history[0].key
                   .toLowerCase()
                   .includes(this.search.toLowerCase())
               );
