Fix variable inspector search functionality properly

--- a/gui/variable-inspector/index.html
+++ b/gui/variable-inspector/index.html
@@ -426,7 +426,8 @@
               }
               return (
                 v.key.toLowerCase().includes(this.search.toLowerCase()) ||
-                v.history[0].key
+                v.history[0].value
+                  .toString()
                   .toLowerCase()
                   .includes(this.search.toLowerCase())
               );
