Make the header and footer of the system command modal sticky

--- a/gui/app/directives/modals/commands/editSystemCommand/editSystemCommandModal.html
+++ b/gui/app/directives/modals/commands/editSystemCommand/editSystemCommandModal.html
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<div class="modal-header sticky-header">
   <button
     type="button"
     class="close"
@@ -188,7 +188,7 @@
   </setting-container>
 </div>
 
-<div class="modal-footer">
+<div class="modal-footer sticky-footer">
   <button
     type="button"
     class="btn btn-danger pull-left"
