Improve menu keyboard accessibility

--- a/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
+++ b/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
@@ -124,14 +124,14 @@
                   <i class="fal fa-bars" aria-hidden="true"></i>
                 </span>
                 <div class="ml-10">
-                  <span
-                    class="noselect clickable"
+                  <button
+                    class="noselect clickable text-5xl"
                     context-menu="$ctrl.getContextMenu(item)"
                     context-menu-on="click"
                     context-menu-orientation="left"
                   >
                     <i class="fal fa-ellipsis-h"></i>
-                  </span>
+                </button>
                 </div>
               </div>
             </td>
