Add an option to edit overlay instances from an effect

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -267,7 +267,9 @@
     <script type="text/javascript" src="./directives/modals/misc/chat-settings-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/connectionPanelModal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/copyShareCodeModal.js"></script>
+    <script type="text/javascript" src="./directives/modals/misc/create-overlay-instances.modal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/dateModal.js"></script>
+    <script type="text/javascript" src="./directives/modals/misc/edit-overlay-instances-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/edit-stream-info-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/editBannedWordsModal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/errorDetailModal.js"></script>
