Update import functionality to allow other data to be added in the future

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -132,6 +132,7 @@
     <script type="text/javascript" src="./services/font-manager.service.js"></script>
     <script type="text/javascript" src="./services/games.service.js"></script>
     <script type="text/javascript" src="./services/hot-key.service.js"></script>
+    <script type="text/javascript" src="./services/import.service.js"></script>
     <script type="text/javascript" src="./services/integration.service.js"></script>
     <script type="text/javascript" src="./services/key-helper.service.js"></script>
     <script type="text/javascript" src="./services/listener.service.js"></script>
