Add visibility settings for quick actions

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -165,6 +165,7 @@
     <script type="text/javascript" src="./directives/chat/feed%20items/chat-alert.js"></script>
     <script type="text/javascript" src="./directives/chat/feed%20items/chat-message.js"></script>
     <script type="text/javascript" src="./directives/chat/feed%20items/reward-redemption.js"></script>
+    <script type="text/javascript" src="./directives/chat/quick-actions/quick-actions.js"></script>
     <script type="text/javascript" src="./directives/commands/commandOption.js"></script>
     <script type="text/javascript" src="./directives/commands/simple-command-options.js"></script>
     <script type="text/javascript" src="./directives/conditional-effect/conditionDisplay.js"></script>
@@ -244,6 +245,7 @@
     <script type="text/javascript" src="./directives/modals/backups/restoreBackupModal.js"></script>
     <script type="text/javascript" src="./directives/modals/channel-rewards/add-edit-channel-reward.js"></script>
     <script type="text/javascript" src="./directives/modals/chat/edit-activity-events-modal.js"></script>
+    <script type="text/javascript" src="./directives/modals/chat/open-quick-actions-editor-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/commands/addOrEditCustomCommand/addOrEditCustomCommandModal.js"></script>
     <script type="text/javascript" src="./directives/modals/commands/addOrEditSubcommandModal.js"></script>
     <script type="text/javascript" src="./directives/modals/commands/editSystemCommand/editSystemCommandModal.js"></script>
