Add a custom quick actions

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -125,6 +125,7 @@
     <script type="text/javascript" src="./services/connection.service.js"></script>
     <script type="text/javascript" src="./services/counters.service.js"></script>
     <script type="text/javascript" src="./services/currency.service.js"></script>
+    <script type="text/javascript" src="./services/custom-quick-actions.service.js"></script>
     <script type="text/javascript" src="./services/data-access.service.js"></script>
     <script type="text/javascript" src="./services/effect-helper.service.js"></script>
     <script type="text/javascript" src="./services/effect-queues.service.js"></script>
@@ -245,8 +246,9 @@
     <script type="text/javascript" src="./directives/misc/tooltip.js"></script>
     <script type="text/javascript" src="./directives/modals/backups/restoreBackupModal.js"></script>
     <script type="text/javascript" src="./directives/modals/channel-rewards/add-edit-channel-reward.js"></script>
+    <script type="text/javascript" src="./directives/modals/chat/add-or-edit-custom-quick-action-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/chat/edit-activity-events-modal.js"></script>
-    <script type="text/javascript" src="./directives/modals/chat/open-quick-actions-editor-modal.js"></script>
+    <script type="text/javascript" src="./directives/modals/chat/quick-action-settings-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/commands/addOrEditCustomCommand/addOrEditCustomCommandModal.js"></script>
     <script type="text/javascript" src="./directives/modals/commands/addOrEditSubcommandModal.js"></script>
     <script type="text/javascript" src="./directives/modals/commands/editSystemCommand/editSystemCommandModal.js"></script>
