Add gift receivers support

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -197,6 +197,7 @@
     <script type="text/javascript" src="./directives/controls/sort-tags-row.js"></script>
     <script type="text/javascript" src="./directives/controls/soundPlayer.js"></script>
     <script type="text/javascript" src="./directives/controls/specialized/discord-channel-webhooks.js"></script>
+    <script type="text/javascript" src="./directives/controls/specialized/gift-receivers-list.js"></script>
     <script type="text/javascript" src="./directives/controls/time-input.js"></script>
     <script type="text/javascript" src="./directives/effect-option-settings/eosAudioOutputDevice.js"></script>
     <script type="text/javascript" src="./directives/effect-option-settings/eosChatterSelect.js"></script>
@@ -262,6 +263,7 @@
     <script type="text/javascript" src="./directives/modals/integrations/addOrEditDiscordWebhookModal.js"></script>
     <script type="text/javascript" src="./directives/modals/integrations/editIntegrationSettingsModal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/aboutModal.js"></script>
+    <script type="text/javascript" src="./directives/modals/misc/add-or-edit-gift-receiver-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/add-or-edit-header-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/add-or-edit-metadata-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/botLoginModal.js"></script>
